# vulkanc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  entry.c
src/core/: defines.h  entry.c
src/platform/: platform.h  platform_win32.c
src/renderer/: context.inl  instance.c  instance.h  renderer.c  renderer.h
src/renderer/vulkan/: context.inl  debug_messenger.c  debug_messenger.h  extensions.c  extensions.h  instance.c  instance.h  layers.c  layers.h
